--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*fonts: yellowtail, abel, droid serif*/
 body{
 	width: 901px;
 }
@@ -36,19 +37,21 @@ nav section{
 }
 .copyright{
 	text-align: center;
-	background-color: blue;
 }
 .share{
 	text-transform: uppercase;
 	padding-top: 12px;
 	position: relative;
-	top: -50px;
+	top: -80px;
 	text-align: center;
 	background-color: red;
 	width: 150px;
 	height: 30px;
 	float: right;
 	color: #bbbbbb
+}
+.instructions{
+	font-family: "Droid serif"
 }
 .instructions br{
 	line-height: 2em;
