add grid system (somewhat) to css

--- a/css/style.css
+++ b/css/style.css
@@ -3,64 +3,96 @@
 	box-sizing: border-box;
 }
 body{
-	width: 960px;
 	margin: 0 auto;
 }
 h1{
 	margin:0;
 	padding:0;
 }
+h1.blogName {
+	font-family: yellowtail;
+	font-size: 20px;
+}
 .blogName{
-	font-size: 15px;
 	text-align: left;
 }
 strong{
 	font-size: 20px;
 }
-h1 img{
-	float: left;
+.social{
+	padding-top: 7px;
+}
+.social:nth-child(7){
+	padding-left: 3px;
+}
+.DateSection{
+	font-family: "abel";
+	text-transform: uppercase;
+	font-size: 10px;
+	margin: 0;
+}
+p{
+	font-family: "droid serif";
+}
+.author{
+	font-family: "droid serif";
+	font-weight: bold;
 }
 .subtitle{
+	font-family: abel;
+	text-transform: uppercase;
 	margin:0;
 	padding:0;
+	font-size: 12px;
 }
 .social{
-	float: left;
+	/*float: left;*/
 	padding-left: 1px;
+	vertical-align: top;
 }
 nav section{
-	float: right;
+	/*float: right;*/
 }
 .bigline{
 	height: 10px;
 	background-color: #bbbbbb;
 }
-.print{
-	float:right;
+.DateSection{
+	text-transform: uppercase;
+	font-family: abel;
+	font-size: 12px;
 }
-.instructions{
+.print{
+	/*float:right;*/
+}
+.instructions {
 	margin: 0 auto;
+	text-indent: 2em;
 }
 .ingredientsList{
 	background-image: url("../images/list-bg.png")
 }
+table{
+	font-family: abel;
+	font-size: 26px;
+	margin: 0 auto;
+	margin-top: 3px;
+	margin-bottom: 3px;
+}
 .copyright{
 	text-align: center;
+	display: block;
 }
 .share{
+	font-family: abel;
 	text-transform: uppercase;
-	padding-top: 12px;
-	position: relative;
-	top: -80px;
+	margin: 0 auto;
 	text-align: center;
 	background-color: red;
 	width: 150px;
 	height: 30px;
-	float: right;
+	/*float: right;*/
 	color: #bbbbbb
-}
-.instructions{
-	font-family: "Droid serif"
 }
 .instructions br{
 	line-height: 2em;
@@ -69,4 +101,5 @@ nav section{
 	position: relative;
 	top: -15px;
 	font-size: 12px;
+	font-family: "droid serif"
 }
