add more systematic characterstics
to continue with the DRY principle I generalized the various conditions I had

as much as I could... Now that I've done it I think the unsemantic way isn't such

a bad idea, because the image seems to be 900px and it would look slightly out of focus

if it were to be 960px, so maybe have the page 900px and use percentages in future.

Working on getting the percentages to work

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 }
 body{
 	margin: 0 auto;
+	font-family: "droid serif"
 }
 h1{
 	margin:0;
@@ -25,17 +26,13 @@ strong{
 .social:nth-child(7){
 	padding-left: 3px;
 }
-.DateSection{
+.subtitle{
 	font-family: "abel";
 	text-transform: uppercase;
 	font-size: 10px;
 	margin: 0;
 }
-p{
-	font-family: "droid serif";
-}
 .author{
-	font-family: "droid serif";
 	font-weight: bold;
 }
 .subtitle{
@@ -45,13 +42,13 @@ p{
 	padding:0;
 	font-size: 12px;
 }
+.Date{
+	margin: 0;
+}
 .social{
 	/*float: left;*/
 	padding-left: 1px;
 	vertical-align: top;
-}
-nav section{
-	/*float: right;*/
 }
 .bigline{
 	height: 10px;
@@ -62,8 +59,8 @@ nav section{
 	font-family: abel;
 	font-size: 12px;
 }
-.print{
-	/*float:right;*/
+.finished-product{
+	background-size: 960px;
 }
 .instructions {
 	margin: 0 auto;
@@ -82,24 +79,23 @@ table{
 .copyright{
 	text-align: center;
 	display: block;
+	margin-top: 100px;
 }
 .share{
 	font-family: abel;
 	text-transform: uppercase;
-	margin: 0 auto;
+	margin: 20px 0 0 0;
 	text-align: center;
 	background-color: red;
 	width: 150px;
 	height: 30px;
-	/*float: right;*/
-	color: #bbbbbb
+	color: #bbbbbb;
+	float: right;
 }
 .instructions br{
 	line-height: 2em;
 }
 .descriptor{
-	position: relative;
-	top: -15px;
+	font-weight: lighter;
 	font-size: 12px;
-	font-family: "droid serif"
 }
